[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "sercommlib"
version = "0.1"
authors = [
  { name="Iain Rosen", email="hello@iainrosen.me" },
]
description = "Serial-based communication library with built-in data integrity checking"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "cryptography",
]
[project.urls]
"Homepage" = "https://github.com/iainrosen/sercommlib"
"Bug Tracker" = "https://github.com/iainrosen/sercommlib/issues"